--- a/package.json
+++ b/package.json
@@ -40,9 +40,11 @@
     "@types/passport-jwt": "^3.0.6",
     "@types/passport-local": "^1.0.34",
     "bcrypt": "^5.0.1",
+    "buffer-to-stream": "^1.0.0",
     "cache-manager": "^4.0.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
+    "cloudinary": "^1.41.0",
     "cookie": "^0.5.0",
     "crypto": "^1.0.1",
     "dayjs": "^1.11.8",
@@ -62,6 +64,7 @@
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
     "socket.io": "^4.5.1",
+    "streamifier": "^0.1.1",
     "swagger": "^0.7.5",
     "swagger-ui-express": "^4.4.0",
     "typeorm": "^0.3.7"
