--- a/.env.sample
+++ b/.env.sample
@@ -2,6 +2,6 @@ DATABASE_USER=hoanle396
 DATABASE_PASSWORD=hoanle396
 DATABASE_DBNAME=decor
 
-CLOUDINARY_NAME=vku-blog
-CLOUDINARY_API_KEY=617866323265373
-CLOUDINARY_API_SECRET=Rqia-Gu0GKlx1SvGBzL14rK8ogU
+CLOUDINARY_NAME=
+CLOUDINARY_API_KEY=
+CLOUDINARY_API_SECRET=
