--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "private": true,
   "license": "UNLICENSED",
   "scripts": {
+    "vercel-build": "yarn global add node-gyp",
     "prebuild": "rimraf dist",
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
@@ -20,8 +21,12 @@
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
+  "engines": {
+    "node": "16"
+  },
   "dependencies": {
     "@liaoliaots/nestjs-redis": "^8.2.2",
+    "@nestjs/cli": "^8.0.0",
     "@nestjs/common": "^8.0.0",
     "@nestjs/config": "^2.1.0",
     "@nestjs/core": "^8.0.0",
@@ -30,15 +35,23 @@
     "@nestjs/passport": "^8.2.2",
     "@nestjs/platform-express": "^8.0.0",
     "@nestjs/platform-socket.io": "^8.4.7",
+    "@nestjs/schematics": "^8.0.0",
     "@nestjs/serve-static": "^2.2.2",
     "@nestjs/swagger": "^5.2.1",
+    "@nestjs/testing": "^8.0.0",
     "@nestjs/typeorm": "^8.1.4",
     "@nestjs/websockets": "^8.4.7",
     "@types/bcrypt": "^5.0.0",
     "@types/cookie": "^0.5.1",
+    "@types/express": "^4.17.13",
+    "@types/jest": "27.4.1",
     "@types/multer": "^1.4.7",
+    "@types/node": "^16.0.0",
     "@types/passport-jwt": "^3.0.6",
     "@types/passport-local": "^1.0.34",
+    "@types/supertest": "^2.0.11",
+    "@typescript-eslint/eslint-plugin": "^5.0.0",
+    "@typescript-eslint/parser": "^5.0.0",
     "bcrypt": "^5.0.1",
     "buffer-to-stream": "^1.0.0",
     "cache-manager": "^4.0.1",
@@ -48,46 +61,39 @@
     "cookie": "^0.5.0",
     "crypto": "^1.0.1",
     "dayjs": "^1.11.8",
+    "eslint": "^8.0.1",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-prettier": "^4.0.0",
     "fs": "^0.0.1-security",
     "googleapis": "^105.0.0",
     "hardhat": "^2.10.1",
     "ioredis": "^5.1.0",
+    "jest": "^27.2.5",
     "jwt": "^0.2.0",
     "multer": "^1.4.5-lts.1",
     "nestjs-redis": "^1.3.3",
     "nestjs-typeorm-paginate": "^4.0.1",
+    "node-gyp": "^9.4.0",
+    "node-gyp-build": "^4.6.1",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
     "pg": "^8.7.3",
+    "prettier": "^2.3.2",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
     "socket.io": "^4.5.1",
+    "source-map-support": "^0.5.20",
     "streamifier": "^0.1.1",
+    "supertest": "^6.1.3",
     "swagger": "^0.7.5",
     "swagger-ui-express": "^4.4.0",
-    "typeorm": "^0.3.7",
-    "@nestjs/cli": "^8.0.0",
-    "@nestjs/schematics": "^8.0.0",
-    "@nestjs/testing": "^8.0.0",
-    "@types/express": "^4.17.13",
-    "@types/jest": "27.4.1",
-    "@types/node": "^16.0.0",
-    "@types/supertest": "^2.0.11",
-    "@typescript-eslint/eslint-plugin": "^5.0.0",
-    "@typescript-eslint/parser": "^5.0.0",
-    "eslint": "^8.0.1",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-prettier": "^4.0.0",
-    "jest": "^27.2.5",
-    "prettier": "^2.3.2",
-    "source-map-support": "^0.5.20",
-    "supertest": "^6.1.3",
     "ts-jest": "^27.0.3",
     "ts-loader": "^9.2.3",
     "ts-node": "^10.0.0",
     "tsconfig-paths": "^3.10.1",
+    "typeorm": "^0.3.7",
     "typescript": "^4.3.5"
   },
   "jest": {
