--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "@types/supertest": "^2.0.11",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
+    "@vercel/node": "^3.0.7",
     "bcrypt": "^5.0.1",
     "buffer-to-stream": "^1.0.0",
     "cache-manager": "^4.0.1",
